# fitness-club-membership

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: celerybeat-schedule
src/apps/bot/: init.py  main.py  mixins.py  tests.py  utils.py  wrapper.py
src/apps/membership/: admin.py  filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/apps/membership/migrations/: 0001_initial.py
src/apps/payments/: admin.py  apps.py  models.py  serializers.py  signals.py  stripe_helper.py  tasks.py  tests.py  urls.py  views.py
src/apps/plans/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/plans/tests/: test_models.py  test_serializers.py  test_views.py
src/apps/user/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
src/apps/user/tests/: test_models.py  test_serializers.py  test_views.py
src/config/: celery.py  settings.py  urls.py
src/migrations/membership/: 0001_initial.py  0002_alter_membership_member.py
src/migrations/payments/: 0001_initial.py  0002_payment_user_alter_payment_status.py  0003_alter_payment_user.py
src/migrations/plans/: 0001_initial.py
src/migrations/user/: 0001_initial.py
