[project]
name = "fitnessClubMembershipService"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django",
    "djangorestframework",
    "django-filter",
    "djangorestframework-simplejwt",
    "drf-spectacular",
    "whitenoise>=6.11.0",
    "psycopg2-binary",
    "python-decouple>=3.8",
    "celery>=5.3",
    "redis>=5.0",
    "django-celery-beat>=2.5",
    "flower>=2.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "pytelegrambotapi>=4.29.1",
    "djangorestframework-stubs>=3.16.7",
    "stripe>=14.2.0",
    "telebot>=0.0.5"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.6",
    "pytest>=8.3"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100

target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
    "**/*schemas*.py",
    "**/manage.py"
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "DJ", # flake8-django
]

ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "DJ001", # avoid using null=True on string-based fields
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["ARG", "S"]
"conftest.py" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
